# agentic-enrichment

./: .gitignore  README.md
cu-agent-rlm/: .gitignore  README.md  pyproject.toml
cu-agent-rlm/docs/: issues.md
cu-agent-rlm/src/: portable_extractor.py
cu-agent-rlm/src/cu_agent_rlm/: __init__.py  chunking.py  cli.py  contracts.py  extraction.py  feedback.py  fields.py  io.py  llm.py  models.py  pipeline.py  prompt_registry.py  prompt_repair.py  schema.py  schema_negotiation.py  subagents.py
cu-agent-rlm/tests/: test_pipeline.py
data/: sample_calls.jsonl
docs/: architecture-refined.html  architecture.en.html  architecture.en.md  architecture.html  architecture.md  dashboard-demo.html  todos.md
qu-agent-rlm/: README.md  pyproject.toml
qu-agent-rlm/docs/: qu_cu_loop_demo.md
qu-agent-rlm/src/qu_agent_rlm/: __init__.py  agent.py  aggregation.py  cli.py  corpus.py  env.py  eval.py  judge.py  llm.py  planner.py  prompt_registry.py  prompt_repair.py  query_tasks.py  replay.py  retrieval.py  retrieval_agent.py  schema_negotiation.py  subagents.py  usage.py
qu-agent-rlm/tests/: test_agent.py
scripts/: demo_tui.py  qu_cu_loop_demo.py  qu_user_query_demo.py  visualize_loop.py
